@@ -1,0 +1,96 @@
+<?php
+
+/* private */ $wgAllMessagesRmy = array(
+'1movedto2' => '$1 sas bichhaldo ko $2',
+'Monobook.js' => "/* tooltips and access keys */
+ta = new Object();
+ta['pt-userpage'] = new Array('.','Miri labyarneski pajina');
+ta['pt-anonuserpage'] = new Array('.','Miri labyarneski pajina ki akanutni IP adress');
+ta['pt-mytalk'] = new Array('n','Miri diskuciyaki pajina');
+ta['pt-anontalk'] = new Array('n','Diskucie le editisarimatenge ki akanutni IP adress');
+ta['pt-preferences'] = new Array('','Sar kamav te dikhel pes miri pajina');
+ta['pt-watchlist'] = new Array('l','I lista le pajinenge so dikhav lendar (monitorizav).');
+ta['pt-mycontris'] = new Array('y','Le mire editisarimata');
+ta['pt-login'] = new Array('o','Mishto si te identifikares tut, pale na si musai.');
+ta['pt-anonlogin'] = new Array('o','Mishto si te identifikares tut, pale na si musai.');
+ta['pt-logout'] = new Array('o','Kathe aćhaves i sesiyunya');
+ta['ca-talk'] = new Array('t','Diskuciya le artikoleske');
+ta['ca-edit'] = new Array('e','Shai te editisares kadaya pajina. Mangas te paledikhes o teksto anglal te uxtaves les.');
+ta['ca-addsection'] = new Array('+','Kathe shai te thos ek komentaryo ki kadaya diskuciya.');
+ta['ca-viewsource'] = new Array('e','Kadaya pajina si brakhli. Shai numa te dikhes o source-code.');
+ta['ca-history'] = new Array('h','Purane versiune le dokumenteske.');
+ta['ca-protect'] = new Array('=','Brakh kadava dokumento.');
+ta['ca-delete'] = new Array('d','Khos kadava dokumento.');
+ta['ca-undelete'] = new Array('d','Palemthav le editisarimata kerdine le kadale dokumenteske sar sas anglal lesko khosipen.');
+ta['ca-move'] = new Array('m','Trade kadava dokumento.');
+ta['ca-nomove'] = new Array('','Nai tuke shayutnipen te trades kadava dokumento.');
+ta['ca-watch'] = new Array('w','Thav kadava dokumento andi monitorizaripnaski lista.');
+ta['ca-unwatch'] = new Array('w','Khos kadava dokumento andar i monitorizaripnaski lista.');
+ta['search'] = new Array('f','Rod andi kadaya Wiki');
+ta['p-logo'] = new Array('','I sherutni pajina');
+ta['n-mainpage'] = new Array('z','Dikh i sherutni pajina');
+ta['n-portal'] = new Array('','O proyekto, so shai te keres, kai arakhes solucie.');
+ta['n-currentevents'] = new Array('','Arakh janglimata le akanutne evenimenturenge');
+ta['n-recentchanges'] = new Array('r','I lista le neve paruvimatenge kerdini andi kadaya wiki.');
+ta['n-randompage'] = new Array('x','Ja ki ek aleatori pajina');
+ta['n-help'] = new Array('','O than kai arakhes zhutipen.');
+ta['n-sitesupport'] = new Array('','Zhutisar amen');
+ta['t-whatlinkshere'] = new Array('j','I lista sa le wiki pajinenge so aven (si phande) vi kathe');
+ta['t-recentchangeslinked'] = new Array('k','Neve paruvimata andi kadaya pajina');
+ta['feed-rss'] = new Array('','Kathe te pravares o RSS flukso le kadale pajinyako');
+ta['feed-atom'] = new Array('','Kathe te pravares o Atom flukso le kadale pajinyako');
+ta['t-contributions'] = new Array('','Dikh i lista le editisarimatenge le kadale labyaresko');
+ta['t-emailuser'] = new Array('','Bićhal ek emailo le kadale labyareske');
+ta['t-upload'] = new Array('u','Bićhal imajine vai media files');
+ta['t-specialpages'] = new Array('q','I lista sa le spechiale pajinengi');
+ta['ca-nstab-main'] = new Array('c','Dikh o artikolo');
+ta['ca-nstab-user'] = new Array('c','Dikh i labyarengi pajina');
+ta['ca-nstab-media'] = new Array('c','Dikh i pajina media');
+ta['ca-nstab-special'] = new Array('','Kadaya si ek spechiali pajina, nashti te editisares la.');
+ta['ca-nstab-wp'] = new Array('a','Dikh i pajina le proyekteski');
+ta['ca-nstab-image'] = new Array('c','Dikh i imajinyaki pajina');
+ta['ca-nstab-mediawiki'] = new Array('c','Dikh o mesajo le sistemesko');
+ta['ca-nstab-template'] = new Array('c','Dikh o formato');
+ta['ca-nstab-help'] = new Array('c','Dikh i zhutipnaski pajina');
+ta['ca-nstab-category'] = new Array('c','Dikh i kategoriya');
+",
+'about'                 => 'Andar',
+'aboutpage'             => '{{ns:Project}}:Andar',
+'aboutsite'             => 'Andar {{SITENAME}}',
+'accesskey-compareselectedversions' => 'o',
+'accesskey-minoredit'   => 'm',
+'accesskey-search'      => 'c',
+'accmailtext'           => 'O nakhavipnasko lav andar \'$1\' bićhaldi ko $2.',
+'accmailtitle'          => 'O nakhavipnasko lav bićhaldi.',
+'actioncomplete'        => 'Agorisardi kerdipen',
+'addedwatch'            => 'Thovdi andi listyate le pajinenge so dikhav len',
+'addedwatchtext'        => 'I pajina "[[:$1]]" thovdi andi tiri lista [[{{ns:Special}}:Watchlist|le artikolenge so dikhes len]].
+Le neve paruvimata le kadale pajinyake thai diskuciaki pajinyake thona kathe, vi dikhena pen le <b>thule semnurenca</b> andi pajina le [[{{ns:Special}}:Recentchanges|neve paruvimatenge]].
+
+Kana kamesa te khoses kadaya pajina andar tiri lista le pajinenge so arakhes ker click andi "Na mai arakh" andi în bara de comenzi în timp ce această pagină este vizibilă.',
+'rclinks'               => 'Arată ultimele $1 modificări din ultimele $2 zile.<br />$3',
+'viewprevnext'          => 'Dikh ($1) ($2) ($3).',
+'viewsource'            => 'Dikh i sursa',
+'viewtalkpage'          => 'Dikh i diskucia',
+'wantedpages'           => 'Kamle pajine',
+'whitelistacctitle'     => 'Chi shai (nai tuke xakaya) te keres konturya',
+'whitelistedittext'     => 'Trebul te [[{{ns:Special}}:Userlogin|autentifikisares]] kashte editisares artikolurya.',
+'whitelistedittitle'    => 'Trebul o autentifikaripen kashte editisares',
+'whitelistreadtext'     => 'Trebul te [[{{ns:Special}}:Userlogin|autentifikisares]] kashte drabares artikolurya.',
+'whitelistreadtitle'    => 'Trebul o autentifikaripen kashte drabares',
+'wikipediapage'         => 'Dikh i pajina meta',
+'wlnote'                => 'Tele si Dedesubt găseşti ultimele $1 schimbări din ultimele <b>$2</b> ore.',
+'wlsaved'               => 'Kadaya si i uxtavni versiunya la tiri listyaki le dikhAceasta este o versiune salvată a listei tale de pagini urmărite.',
+'wlshowlast'            => 'Arată ultimele $1 ore $2 zile $3',
+'wrong_wfQuery_params'  => 'Doshalo gin le parametrengo ko wfQuery()<br />I function: $1<br />Query: $2',
+'wrongpassword'         => 'O nakhavipnasko lav so thovdyan si doshalo. Te rugăm să încerci din nou.',
+'yourdiff'              => 'Ververimata',
+'youremail'             => 'Emailesko adress (kana kames)*',
+'yourname'              => 'Labyaresko anav',
+'yournick'              => 'I xarni versyunya, le semnaturenge',
+'yourpassword'          => 'O nakhavipnasko lav',
+'yourpasswordagain'     => 'O nakhavipnasko lav de nevo',
+'yourrealname'          => 'Tiro chacho anav*',
+'yourtext'              => 'Tiro teksto',
+);
+?>
